--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="scroll">
   <section>
     <div>
-    <h3>aloma</h3>
+    <h3>Aloma</h3>
 <figure>
    <img src="aloma-cover.png" alt="Aloma"> 
  <audio 
@@ -129,14 +129,14 @@
 </section>
 
  <section>  
-  <input class="button"
+  <input class="buttonA"
        type="button"
        value="More Trending">
     <!--<h3>More trending</h3>-->
  </section>
    
   
-  <section id= "your ">   
+  <section id= "Playlists">   
     <h2>Your playlists</h2>
     <div class="scroll">
   <section>
@@ -182,7 +182,7 @@
 </section>
 
   <section>
-       <input class="button"
+       <input class="buttonB"
        type="button"
        value="All Your Playlists">
    <!-- <h3>All your playlists</h3>-->
@@ -234,7 +234,7 @@
 </section> 
 
 <section> 
-    <input class="button"
+    <input class="buttonC"
        type="button"
        value="More Curated">
    <!-- <h3>More curated</h3>-->
