--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
   <dd>The music that got you through the lock down.</dd>
 </dl>
     </div>
+</section>
 
+<section>
 <div>
 <img src="pumpkin-spice-cover.png" alt="pumpkin-spice-cover">
 <dl>
@@ -155,7 +157,9 @@
   <dd>Creamy and spicy, just like your favorite autumnal latte.</dd>
 </dl>
     </div>
+</section>
 
+<section>
 <div>
 <img src="quiet-storm-cover.png" alt="quiet-storm-cover">
 <dl>
@@ -163,7 +167,9 @@
   <dd>Slow tempos and relaxed rhythms.</dd> 
 </dl>
     </div>
+</section>
 
+<section>
 <div>
 <img src="smooth-jazz-cover.png" alt="smooth-jazz-cover">
 <dl>
@@ -171,7 +177,9 @@
   <dd>The pioneers of smooth jazz</dd>
 </dl>
     </div>
+</section>
 
+<section>
 <div>
 <img src="smooth-study-cover.png" alt="smooth-study-cover">
 <dl>
@@ -199,7 +207,9 @@
   <dd>Light up the afternoon with these energetic hits.</dd>
 </dl>
     </div>
+</section>
 
+<section>
 <div>
   <img src="dinner-party-cover.png" alt="dinner-party-cover">
 <dl>
@@ -207,7 +217,9 @@
   <dd>Background music to give your party life, but allow your guests to chat.</dd> 
 </dl>
     </div>
+</section>
 
+<section>
 <div>
   <img src="mellow-cover.png" alt="mellow-cover">
 <dl>
@@ -215,7 +227,9 @@
   <dd>Relax after a stressful day with this collection of extra smooth jazz.</dd>
   </dl>
     </div>
+</section>
 
+<section>
 <div>
   <img src="jazz-chill-cover.png" alt="jazz-chil-cover">
 <dl>
@@ -223,7 +237,9 @@
   <dd>Set the mood with these silky sounds.</dd>
 </dl>
 </div>
+</section>
 
+<section>
 <div>
   <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
 <dl>
