Updated html & css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav>  
   <h2>Main Navigation</h2>
    <ul>
-    <!--<li><a href="#">MuzakMaker</a></li>-->
+     <li><a href="#">MuzakMaker</a></li>
      <li><a href="#"></a>Trending Songs</li>
      <li><a href="#"></a>Your playlists</li>
      <li><a href="#"></a>Curated Playlists</li>
@@ -31,17 +31,18 @@
   <section id="trending">
     <h2>Trending Songs </h2>
     <div class="scroll">
+    </div>
+  </section>
+
   <section>
     <div>
     <h3>Aloma</h3>
-<figure>
    <img src="aloma-cover.png" alt="Aloma"> 
  <audio 
          controls 
          src="aloma.mp3">
     <a href="aloma.mp3"> Play audio </a>
     </audio>
-</figure>
   <dl>
     <dt>Artist </dt>
     <dd>Cali</dd>
@@ -52,14 +53,12 @@
 <section>
   <div>
   <h3>My Road</h3>
-  <figure>  
    <img src="my-road-cover.png" alt="My Road"> 
   <audio 
          controls 
          src="my-road.mp3">
     <a href="my-road.mp3">Play audio </a>
     </audio>
-</figure>
   <dl>
   <dt>Artist</dt>
   <dd>Nesterouk</dd>
@@ -70,7 +69,6 @@
 <section>
   <div>
   <h3>Papaya</h3>
-  <figure>
   <img src="papaya-cover.png" alt="Papaya">  
     <audio
         controls
@@ -79,7 +77,6 @@
                 Play audio
             </a>
     </audio>
-</figure>
   <dl>
    <dt>Artist</dt>
   <dd>Dredstudio</dd>
@@ -90,7 +87,6 @@
 <section>
   <div>
   <h3>Smoothies</h3>
-  <figure>
     <img src="smoothies-cover.png" alt="Smoothies"> 
     <audio
         controls
@@ -99,7 +95,6 @@
                 Play audio
             </a>
     </audio> 
-</figure>
   <dl>
     <dt>Artist</dt> 
     <dd>Black Rhomb</dd>
@@ -110,8 +105,6 @@
 <section>
   <div>
   <h3>Successful Performance</h3>
- <div>
-  <figure>
   <img src="successful-performance-cover.png" alt="Successful-performance">  
     <audio
         controls
@@ -120,7 +113,6 @@
                 Play audio
             </a>
     </audio>
-</figure>
   <dl>
     <dt>Artist</dt> 
   <dd>Ricky Bombino</dd>
@@ -128,25 +120,29 @@
 </div>
 </section>
 
- <section>  
-  <input class="buttonA"
+ <section class="buttonA">  
+  <div class="buttonA"
        type="button"
        value="More Trending">
     <!--<h3>More trending</h3>-->
- </section>
+    </div>
+  </section>
    
   
   <section id= "Playlists">   
     <h2>Your playlists</h2>
     <div class="scroll">
-  <section>
-<div>    
-<img src="best-of-2020-cover.png" alt="best-of-2020-cover">
- <dl>
-  <dt>Best of 2020</dt>
-  <dd>The music that got you through the lock down.</dd>
-</dl>
     </div>
+  </section>
+
+<section>
+  <div>    
+    <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
+      <dl>
+        <dt>Best of 2020</dt>
+        <dd>The music that got you through the lock down.</dd>
+      </dl>
+  </div>
 </section>
 
 <section>
@@ -189,76 +185,81 @@
     </div>
 </section>
 
-  <section>
-       <input class="buttonB"
+  <section class="buttonB">
+       <div class="buttonB"
        type="button"
        value="All Your Playlists">
    <!-- <h3>All your playlists</h3>-->
+    </div>
   </section>
   
   <section id="Curated">
     <h2>Curated Playlists</h2>
     <div class="scroll">
-  <section>
-<div>
-<img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
-<dl>
-  <dt>Boozy Brunch</dt>
-  <dd>Light up the afternoon with these energetic hits.</dd>
-</dl>
+    </div>
+  </section>
+
+<section>
+  <div>
+    <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
+      <dl>
+        <dt>Boozy Brunch</dt>
+        <dd>Light up the afternoon with these energetic hits.</dd>
+      </dl>
+ </div>
+</section>
+
+<section>
+  <div>
+    <img src="dinner-party-cover.png" alt="dinner-party-cover">
+      <dl>
+        <dt>Dinner Party</dt>
+        <dd>Background music to give your party life, but allow your guests to chat.</dd> 
+      </dl>
+  </div>
+</section>
+
+<section>
+    <div>
+      <img src="mellow-cover.png" alt="mellow-cover">
+    <dl>
+      <dt>Mellow</dt>
+      <dd>Relax after a stressful day with this collection of extra smooth jazz.</dd>
+      </dl>
     </div>
 </section>
 
 <section>
-<div>
-  <img src="dinner-party-cover.png" alt="dinner-party-cover">
-<dl>
-  <dt>Dinner Party</dt>
-  <dd>Background music to give your party life, but allow your guests to chat.</dd> 
-</dl>
-    </div>
+  <div>
+    <img src="jazz-chill-cover.png" alt="jazz-chil-cover">
+      <dl>
+        <dt>Jazz and Chill</dt>
+        <dd>Set the mood with these silky sounds.</dd>
+      </dl>
+  </div>
 </section>
 
 <section>
-<div>
-  <img src="mellow-cover.png" alt="mellow-cover">
-<dl>
-  <dt>Mellow</dt>
-  <dd>Relax after a stressful day with this collection of extra smooth jazz.</dd>
-  </dl>
-    </div>
-</section>
-
-<section>
-<div>
-  <img src="jazz-chill-cover.png" alt="jazz-chil-cover">
-<dl>
-  <dt>Jazz and Chill</dt>
-  <dd>Set the mood with these silky sounds.</dd>
-</dl>
-</div>
-</section>
-
-<section>
-<div>
-  <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
-<dl>
-  <dt>Jazz Saxophone</dt>
-  <dd>The greatest collection of your sax favorites.     </dd>
-</dl>
-</div> 
+  <div>
+    <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
+      <dl>
+        <dt>Jazz Saxophone</dt>
+        <dd>The greatest collection of your sax favorites.     </dd>
+      </dl>
+  </div> 
 </section> 
 
-<section> 
-    <input class="buttonC"
+<section class="buttonC"> 
+    <div class="buttonC"
        type="button"
        value="More Curated">
    <!-- <h3>More curated</h3>-->
-</section>
+    </div>
+  </section>
   
 <footer>
   <p><small>Copyright 2022 Smooth Jazz</small></p>
-</footer>
-</main>
-</body>
-  </html>
+      </footer>
+    </main>
+  </body>
+</html>
