--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
    <link href="styles.css" rel="stylesheet">
 </head>
 
-<!-- <body style="background-color:#020659">-->
+<!--header-->
 <header> 
 <h1>MuzakMaker</h1>
 </header>
+
+<!--navigation-->
 <nav>  
   <h2>Main Navigation</h2>
    <ul>
@@ -20,14 +22,16 @@
      <li><a href="logo"><img src="duke-silver.png" alt="duke silver"></a></li>
   </ul>
 </nav>
+
+<!--start to the main-->
 <main>
- 
   <section>
     <h2>Smooth Jazz</h2>
     <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.
  </p>
   </section>
-  
+
+  <!--trending songs-->
   <section id="trending">
     <h2>Trending Songs </h2>
     <div class="scroll">
@@ -120,22 +124,17 @@
 </div>
 </section>
 
- <section class="buttonA">  
-  <div class="buttonA"
-       type="button"
-       value="More Trending">
-    <!--<h3>More trending</h3>-->
-    </div>
-  </section>
+<!--button: more trending-->
+<button name="buttonA">More Trending</button>
+
    
-  
+  <!--your playlists-->
   <section id= "Playlists">   
     <h2>Your playlists</h2>
     <div class="scroll">
     </div>
   </section>
 
-<section>
   <div>    
     <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
       <dl>
@@ -143,9 +142,7 @@
         <dd>The music that got you through the lock down.</dd>
       </dl>
   </div>
-</section>
 
-<section>
 <div>
 <img src="pumpkin-spice-cover.png" alt="pumpkin-spice-cover">
 <dl>
@@ -153,9 +150,7 @@
   <dd>Creamy and spicy, just like your favorite autumnal latte.</dd>
 </dl>
     </div>
-</section>
 
-<section>
 <div>
 <img src="quiet-storm-cover.png" alt="quiet-storm-cover">
 <dl>
@@ -163,9 +158,7 @@
   <dd>Slow tempos and relaxed rhythms.</dd> 
 </dl>
     </div>
-</section>
 
-<section>
 <div>
 <img src="smooth-jazz-cover.png" alt="smooth-jazz-cover">
 <dl>
@@ -173,9 +166,7 @@
   <dd>The pioneers of smooth jazz</dd>
 </dl>
     </div>
-</section>
 
-<section>
 <div>
 <img src="smooth-study-cover.png" alt="smooth-study-cover">
 <dl>
@@ -183,23 +174,17 @@
   <dd>Background music to keep you going while you study.</dd> 
 </dl>
     </div>
-</section>
 
-  <section class="buttonB">
-       <div class="buttonB"
-       type="button"
-       value="All Your Playlists">
-   <!-- <h3>All your playlists</h3>-->
-    </div>
-  </section>
+<!--button: all your playlists-->
+<button name="buttonB">All Your Playlists</button>
   
+  <!--curated playlist-->
   <section id="Curated">
     <h2>Curated Playlists</h2>
     <div class="scroll">
     </div>
   </section>
 
-<section>
   <div>
     <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
       <dl>
@@ -207,9 +192,7 @@
         <dd>Light up the afternoon with these energetic hits.</dd>
       </dl>
  </div>
-</section>
 
-<section>
   <div>
     <img src="dinner-party-cover.png" alt="dinner-party-cover">
       <dl>
@@ -217,19 +200,15 @@
         <dd>Background music to give your party life, but allow your guests to chat.</dd> 
       </dl>
   </div>
-</section>
 
-<section>
-    <div>
+  <div>
       <img src="mellow-cover.png" alt="mellow-cover">
     <dl>
       <dt>Mellow</dt>
       <dd>Relax after a stressful day with this collection of extra smooth jazz.</dd>
       </dl>
-    </div>
-</section>
+  </div>
 
-<section>
   <div>
     <img src="jazz-chill-cover.png" alt="jazz-chil-cover">
       <dl>
@@ -237,28 +216,20 @@
         <dd>Set the mood with these silky sounds.</dd>
       </dl>
   </div>
-</section>
 
-<section>
   <div>
     <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
       <dl>
         <dt>Jazz Saxophone</dt>
         <dd>The greatest collection of your sax favorites.     </dd>
       </dl>
-  </div> 
-</section> 
+  </div>  
 
-<section class="buttonC"> 
-    <div class="buttonC"
-       type="button"
-       value="More Curated">
-   <!-- <h3>More curated</h3>-->
-    </div>
-  </section>
-  
-<footer>
-  <p><small>Copyright 2022 Smooth Jazz</small></p>
+ <!--button: more curated-->
+      <button name="buttonC">More Curated</button>
+<!--footer-->
+      <footer>
+        <p><small>Copyright 2022 Smooth Jazz</small></p>
       </footer>
     </main>
   </body>
