--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav>  
   <h2>Main Navigation</h2>
    <ul>
-     <li><a href="#">MuzakMaker</a></li>
+     <li><a href="Muza">MuzakMaker</a></li>
      <li><a href="#"></a>Trending Songs</li>
      <li><a href="#"></a>Your playlists</li>
      <li><a href="#"></a>Curated Playlists</li>
