--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <nav>  
   <h2>Main Navigation</h2>
    <ul>
-     <li><a href="Muza">MuzakMaker</a></li>
-     <li><a href="#"></a>Trending Songs</li>
-     <li><a href="#"></a>Your playlists</li>
-     <li><a href="#"></a>Curated Playlists</li>
+     <li><a href="#Muza">MuzakMaker</a></li>
+     <li><a href="#TS"></a>Trending Songs</li>
+     <li><a href="#YP"></a>Your playlists</li>
+     <li><a href="#CP"></a>Curated Playlists</li>
      <li><a href="logo"><img src="duke-silver.png" alt="duke silver"></a></li>
   </ul>
 </nav>
@@ -37,8 +37,9 @@
     <div class="scroll">
     </div>
   </section>
+  <div class="trend">
 
-  <section>
+  <section class="Aloma">
     <div>
     <h3>Aloma</h3>
    <img src="aloma-cover.png" alt="Aloma"> 
@@ -54,7 +55,7 @@
 </div>
 </section>
 
-<section>
+<section class="my road">
   <div>
   <h3>My Road</h3>
    <img src="my-road-cover.png" alt="My Road"> 
@@ -70,7 +71,7 @@
 </div>
 </section>
 
-<section>
+<section class="papaya">
   <div>
   <h3>Papaya</h3>
   <img src="papaya-cover.png" alt="Papaya">  
@@ -88,7 +89,7 @@
 </div>
 </section>
 
-<section>
+<section class="smoothies">
   <div>
   <h3>Smoothies</h3>
     <img src="smoothies-cover.png" alt="Smoothies"> 
@@ -106,7 +107,7 @@
 </div>
 </section>
 
-<section>
+<section class="successful">
   <div>
   <h3>Successful Performance</h3>
   <img src="successful-performance-cover.png" alt="Successful-performance">  
@@ -123,39 +124,36 @@
   </dl> 
 </div>
 </section>
-
+</div>
 <!--button: more trending-->
 <button name="buttonA">More Trending</button>
 
    
   <!--your playlists-->
-  <section id= "Playlists">   
+  <section id="Playlists">   
     <h2>Your playlists</h2>
     <div class="scroll">
     </div>
   </section>
+  
+  <section class="best">
+      <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
+        <h3>Best of 2020</h3>
+        <p>The music that got you through the lock down.</p>
+  
+  </section>
 
-  <div>    
-    <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
-      <dl>
-        <dt>Best of 2020</dt>
-        <dd>The music that got you through the lock down.</dd>
-      </dl>
+  <div>
+    <img src="pumpkin-spice-cover.png" alt="pumpkin-spice-cover">
+      <h3>Pumpkin Spice</h3>
+      <p>Creamy and spicy, just like your favorite autumnal latte.</p>
   </div>
-
-<div>
-<img src="pumpkin-spice-cover.png" alt="pumpkin-spice-cover">
-<dl>
-  <dt>Pumpkin Spice</dt>
-  <dd>Creamy and spicy, just like your favorite autumnal latte.</dd>
-</dl>
-    </div>
 
 <div>
 <img src="quiet-storm-cover.png" alt="quiet-storm-cover">
 <dl>
-  <dt>Quiet Storm</dt>
-  <dd>Slow tempos and relaxed rhythms.</dd> 
+  <h3>Quiet Storm</h3>
+  <p>Slow tempos and relaxed rhythms.</p> 
 </dl>
     </div>
 
@@ -221,7 +219,7 @@
     <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
       <dl>
         <dt>Jazz Saxophone</dt>
-        <dd>The greatest collection of your sax favorites.     </dd>
+        <dd>The greatest collection of your sax favorites. </dd>
       </dl>
   </div>  
 
