--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!--navigation-->
 <nav>  
   <h2>Main Navigation</h2>
+  <input class="checkbox" id="dropdown">
+  <label for="dropdown"><span></span></label>
    <ul>
      <li><a href="#Muza">MuzakMaker</a></li>
      <li><a href="#TS"></a>Trending Songs</li>
