--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--navigation-->
 <nav>  
   <h2>Main Navigation</h2>
-  <input class="menu" id="dropdown">
+  <!--<input class="menu" id="dropdown">-->
   <label for="dropdown"><span></span></label>
    <ul>
      <li><a href="#muza">MuzakMaker</a></li>
