--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <nav>  
   <h2>Main Navigation</h2>
   <!--<input class="menu" id="dropdown">-->
-  <label for="dropdown"><span></span></label>
+  <!--<label for="dropdown"><span></span></label>-->
    <ul>
      <li><a href="#muza">MuzakMaker</a></li>
-     <li><a href="#ts"></a>Trending Songs</li>
-     <li><a href="#yp"></a>Your playlists</li>
-     <li><a href="#cp"></a>Curated Playlists</li>
+     <li><a href="#"></a>Trending Songs</li>
+     <li><a href="#"></a>Your playlists</li>
+     <li><a href="#"></a>Curated Playlists</li>
      <li><a href="#logo"><img src="duke-silver.png" alt="duke silver"></a></li>
   </ul>
 </nav>
@@ -148,28 +148,22 @@
       <p>Creamy and spicy, just like your favorite autumnal latte.</p>
   </div>
 
-<div>
-<img src="quiet-storm-cover.png" alt="quiet-storm-cover">
-<dl>
-  <h3>Quiet Storm</h3>
-  <p>Slow tempos and relaxed rhythms.</p> 
-</dl>
-    </div>
+  <div>
+    <img src="quiet-storm-cover.png" alt="quiet-storm-cover">
+    <h3>Quiet Storm</h3>
+    <p>Slow tempos and relaxed rhythms.</p> 
+      </div>
 
 <div>
 <img src="smooth-jazz-cover.png" alt="smooth-jazz-cover">
-<dl>
-  <dt>Smooth Jazz</dt>
-  <dd>The pioneers of smooth jazz</dd>
-</dl>
+  <h3>Smooth Jazz</h3>
+  <p>The pioneers of smooth jazz</p>
     </div>
 
 <div>
 <img src="smooth-study-cover.png" alt="smooth-study-cover">
-<dl>
-  <dt>Smooth Study</dt>
-  <dd>Background music to keep you going while you study.</dd> 
-</dl>
+  <h3>Smooth Study</h3>
+  <p>Background music to keep you going while you study.</p> 
     </div>
  </section>
 
@@ -185,42 +179,32 @@
 
   <div>
     <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
-      <dl>
-        <dt>Boozy Brunch</dt>
-        <dd>Light up the afternoon with these energetic hits.</dd>
-      </dl>
+        <h3>Boozy Brunch</h3>
+        <p>Light up the afternoon with these energetic hits.</p>
  </div>
 
   <div>
     <img src="dinner-party-cover.png" alt="dinner-party-cover">
-      <dl>
-        <dt>Dinner Party</dt>
-        <dd>Background music to give your party life, but allow your guests to chat.</dd> 
-      </dl>
+        <h3>Dinner Party</h3>
+        <p>Background music to give your party life, but allow your guests to chat.</p> 
   </div>
 
   <div>
       <img src="mellow-cover.png" alt="mellow-cover">
-    <dl>
-      <dt>Mellow</dt>
-      <dd>Relax after a stressful day with this collection of extra smooth jazz.</dd>
-      </dl>
+      <h3>Mellow</h3>
+      <p>Relax after a stressful day with this collection of extra smooth jazz.</p>    
   </div>
 
   <div>
     <img src="jazz-chill-cover.png" alt="jazz-chil-cover">
-      <dl>
-        <dt>Jazz and Chill</dt>
-        <dd>Set the mood with these silky sounds.</dd>
-      </dl>
+        <h3>Jazz and Chill</h3>
+        <p>Set the mood with these silky sounds.</p>
   </div>
 
   <div>
     <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
-      <dl>
-        <dt>Jazz Saxophone</dt>
-        <dd>The greatest collection of your sax favorites. </dd>
-      </dl>
+        <h3>Jazz Saxophone</h3>
+        <p>The greatest collection of your sax favorites. </p>
   </div>
   </section>  
 
