--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <!--start to the main-->
 <main>
-  <section>
+  <section class="smooth">
     <h2>Smooth Jazz</h2>
     <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.
  </p>
