--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--<input class="menu" id="dropdown">-->
   <!--<label for="dropdown"><span></span></label>-->
    <ul>
-     <li><a href="#muza">MuzakMaker</a></li>
+     <li><a class="#muza">MuzakMaker</a></li>
      <li><a href="#"></a>Trending Songs</li>
      <li><a href="#"></a>Your playlists</li>
      <li><a href="#"></a>Curated Playlists</li>
