--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <!--<input class="menu" id="dropdown">-->
   <!--<label for="dropdown"><span></span></label>-->
    <ul>
-     <li><a class="#muza">MuzakMaker</a></li>
-     <li><a href="#"></a>Trending Songs</li>
-     <li><a href="#"></a>Your playlists</li>
-     <li><a href="#"></a>Curated Playlists</li>
+     <li><a href="#muza">MuzakMaker</a></li>
+     <li><a href=""></a>Trending Songs</li>
+     <li><a href=""></a>Your playlists</li>
+     <li><a href=""></a>Curated Playlists</li>
      <li><a href="#logo"><img src="duke-silver.png" alt="duke silver"></a></li>
   </ul>
 </nav>
