--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <!--<input class="menu" id="dropdown">-->
   <!--<label for="dropdown"><span></span></label>-->
    <ul>
-     <li><a href="#muza">MuzakMaker</a></li>
-     <li><a href=""></a>Trending Songs</li>
-     <li><a href=""></a>Your playlists</li>
-     <li><a href=""></a>Curated Playlists</li>
-     <li><a href="#logo"><img src="duke-silver.png" alt="duke silver"></a></li>
+     <li><a href="#home">MuzakMaker</a></li>
+     <li><a href="#trending"></a>Trending Songs</li>
+     <li><a href="#playlists"></a>Your playlists</li>
+     <li><a href="#curated"></a>Curated Playlists</li>
+     <li><a href="#user"><img src="duke-silver.png" alt="duke silver"></a></li>
   </ul>
 </nav>
 
@@ -160,7 +160,7 @@
  </section>
 
 <!--button: all your playlists-->
-<button name="buttonB">All Your Playlists</button>
+<a button name="buttonB">All Your Playlists</button>
   
   <!--curated playlist-->
   <section id="curated">
