--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </div>
 </section>
 <!--button: more trending-->
-<button name="buttonA">More Trending</button>
+<button name="buttona">More Trending</button>
 
    
   <!--your playlists-->
@@ -160,7 +160,7 @@
  </section>
 
 <!--button: all your playlists-->
-<a button name="buttonB">All Your Playlists</button>
+<button name="buttonb">All Your Playlists</button>
   
   <!--curated playlist-->
   <section id="curated">
@@ -201,7 +201,7 @@
   </section>  
 
  <!--button: more curated-->
-      <button name="buttonC">More Curated</button>
+      <button name="buttonc">More Curated</button>
 <!--footer-->
       <footer>
         <p><small>Copyright 2022 Smooth Jazz</small></p>
