--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   </section>  
 
  <!--button: more curated-->
-      <button name="buttonc">More Curated</button>
+      <a class="buttonc">More Curated</a>
 <!--footer-->
       <footer>
         <p><small>Copyright 2022 Smooth Jazz</small></p>
