--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </div>
 </section>
 <!--button: more trending-->
-<button name="buttona">More Trending</button>
+<a class="buttona">More Trending</a>
 
    
   <!--your playlists-->
@@ -160,7 +160,7 @@
  </section>
 
 <!--button: all your playlists-->
-<button name="buttonb">All Your Playlists</button>
+<a class="buttonb">All Your Playlists</a>
   
   <!--curated playlist-->
   <section id="curated">
