--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="scroll">
     </div>
 
+    <section>
     <div>
     <h3>Aloma</h3>
       <dl>
@@ -52,7 +53,9 @@
     <a href="aloma.mp3"> Play audio </a>
     </audio>
 </div>
+</section>
 
+<section>
   <div>
   <h3>My Road</h3> 
     <dl>
@@ -66,8 +69,9 @@
     <a href="my-road.mp3">Play audio </a>
     </audio>
 </div>
+</section>
 
-
+<section>
   <div>
     <h3>Papaya</h3>
     <dl>
@@ -83,7 +87,9 @@
               </a>
       </audio> 
 </div>
+</section>
 
+<section>
   <div>
   <h3>Smoothies</h3>
     <dl>
@@ -99,7 +105,9 @@
             </a>
     </audio> 
 </div>
+</section>
 
+<section>
   <div>
   <h3>Successful Performance</h3>
     <dl>
@@ -115,6 +123,7 @@
             </a>
     </audio>
 </div>
+</section>
 </section>
 <!--button: more trending-->
 <a class="buttona">More Trending</a>
