--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--<input class="menu" id="dropdown">-->
   <!--<label for="dropdown"><span></span></label>-->
    <ul>
-     <li><a href="#home">MuzakMaker</a></li>
+     <li><a href="home">MuzakMaker</a></li>
      <li><a href="#trending"></a>Trending Songs</li>
      <li><a href="#playlists"></a>Your playlists</li>
      <li><a href="#curated"></a>Curated Playlists</li>
