--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--<input class="menu" id="dropdown">-->
   <!--<label for="dropdown"><span></span></label>-->
    <ul>
-     <li><a href="home">MuzakMaker</a></li>
+     <li><a class="#home">MuzakMaker</a></li>
      <li><a href="#trending"></a>Trending Songs</li>
      <li><a href="#playlists"></a>Your playlists</li>
      <li><a href="#curated"></a>Curated Playlists</li>
@@ -126,7 +126,7 @@
 </section>
 </section>
 <!--button: more trending-->
-<a class="buttona">More Trending</a>
+<a href class="buttona">More Trending</a>
 
    
   <!--your playlists-->
@@ -135,7 +135,6 @@
     <div class="scroll">
     </div>
     
-  
   
   <div>
       <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
