--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--<input class="menu" id="dropdown">-->
   <!--<label for="dropdown"><span></span></label>-->
    <ul>
-     <li><a class="#home">MuzakMaker</a></li>
+     <li><a href="#home">MuzakMaker</a></li>
      <li><a href="#trending"></a>Trending Songs</li>
      <li><a href="#playlists"></a>Your playlists</li>
      <li><a href="#curated"></a>Curated Playlists</li>
@@ -132,7 +132,7 @@
   <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll">
+    <div class="scrolla">
     </div>
     
   
@@ -173,7 +173,7 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll">
+    <div class="scrollb">
     </div>
   
 
