--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scrolla">
+    <div class="scroll">
     </div>
     
   
@@ -173,7 +173,7 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scrollb">
+    <div class="scroll">
     </div>
   
 
