--- a/index.html
+++ b/index.html
@@ -132,39 +132,39 @@
   <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll">
-    </div>
-    
-  
-  <div>
+    <div class="scroll1">
+    <div>
+  <section>
       <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
         <h3>Best of 2020</h3>
         <p>The music that got you through the lock down.</p>
-  </div>
+  </section>
 
-  <div>
+  <section>
     <img src="pumpkin-spice-cover.png" alt="pumpkin-spice-cover">
       <h3>Pumpkin Spice</h3>
       <p>Creamy and spicy, just like your favorite autumnal latte.</p>
-  </div>
+  </section>
 
-  <div>
+  <section>
     <img src="quiet-storm-cover.png" alt="quiet-storm-cover">
     <h3>Quiet Storm</h3>
     <p>Slow tempos and relaxed rhythms.</p> 
-      </div>
+  </section>
 
-<div>
+<section>
 <img src="smooth-jazz-cover.png" alt="smooth-jazz-cover">
   <h3>Smooth Jazz</h3>
   <p>The pioneers of smooth jazz</p>
-    </div>
+</section>
 
-<div>
+<section>
 <img src="smooth-study-cover.png" alt="smooth-study-cover">
   <h3>Smooth Study</h3>
   <p>Background music to keep you going while you study.</p> 
+</section>
     </div>
+  </div>
  </section>
 
 <!--button: all your playlists-->
@@ -173,38 +173,39 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll">
-    </div>
-  
+    <div class="scroll2">
 
-  <div>
+   <div>
+  <section>
     <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
         <h3>Boozy Brunch</h3>
         <p>Light up the afternoon with these energetic hits.</p>
- </div>
+  </section>
 
-  <div>
+  <section>
     <img src="dinner-party-cover.png" alt="dinner-party-cover">
         <h3>Dinner Party</h3>
         <p>Background music to give your party life, but allow your guests to chat.</p> 
-  </div>
+  </section>
 
-  <div>
+  <section>
       <img src="mellow-cover.png" alt="mellow-cover">
       <h3>Mellow</h3>
       <p>Relax after a stressful day with this collection of extra smooth jazz.</p>    
-  </div>
+  </section>
 
-  <div>
+  <section>
     <img src="jazz-chill-cover.png" alt="jazz-chil-cover">
         <h3>Jazz and Chill</h3>
         <p>Set the mood with these silky sounds.</p>
-  </div>
+  </section>
 
-  <div>
+  <section>
     <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
         <h3>Jazz Saxophone</h3>
         <p>The greatest collection of your sax favorites. </p>
+  </section>
+  </div>
   </div>
   </section>  
 
