--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll1">
+    <div class="scroll1"></div>
     <div>
   <section>
       <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
@@ -163,7 +163,6 @@
   <h3>Smooth Study</h3>
   <p>Background music to keep you going while you study.</p> 
 </section>
-    </div>
   </div>
  </section>
 
@@ -173,7 +172,7 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll2">
+    <div class="scroll2"></div>
 
    <div>
   <section>
@@ -205,7 +204,6 @@
         <h3>Jazz Saxophone</h3>
         <p>The greatest collection of your sax favorites. </p>
   </section>
-  </div>
   </div>
   </section>  
 
