--- a/index.html
+++ b/index.html
@@ -133,36 +133,35 @@
   <section id="playlists">   
     <h2>Your playlists</h2>
     <div class="scroll1"></div>
-    <div>
-  <section>
+  <div>
       <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
         <h3>Best of 2020</h3>
         <p>The music that got you through the lock down.</p>
-  </section>
+  </div>
 
-  <section>
+  <div>
     <img src="pumpkin-spice-cover.png" alt="pumpkin-spice-cover">
       <h3>Pumpkin Spice</h3>
       <p>Creamy and spicy, just like your favorite autumnal latte.</p>
-  </section>
+  </div>
 
-  <section>
+  <div>
     <img src="quiet-storm-cover.png" alt="quiet-storm-cover">
     <h3>Quiet Storm</h3>
     <p>Slow tempos and relaxed rhythms.</p> 
-  </section>
+  </div>
 
-<section>
+<div>
 <img src="smooth-jazz-cover.png" alt="smooth-jazz-cover">
   <h3>Smooth Jazz</h3>
   <p>The pioneers of smooth jazz</p>
-</section>
+</div>
 
-<section>
+<div>
 <img src="smooth-study-cover.png" alt="smooth-study-cover">
   <h3>Smooth Study</h3>
   <p>Background music to keep you going while you study.</p> 
-</section>
+</div>
   </div>
  </section>
 
@@ -174,36 +173,34 @@
     <h2>Curated Playlists</h2>
     <div class="scroll2"></div>
 
-   <div>
-  <section>
+ <div>
     <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
         <h3>Boozy Brunch</h3>
         <p>Light up the afternoon with these energetic hits.</p>
-  </section>
-
-  <section>
+</div>
+  <div>
     <img src="dinner-party-cover.png" alt="dinner-party-cover">
         <h3>Dinner Party</h3>
         <p>Background music to give your party life, but allow your guests to chat.</p> 
-  </section>
+  </div>
 
-  <section>
+  <div>
       <img src="mellow-cover.png" alt="mellow-cover">
       <h3>Mellow</h3>
       <p>Relax after a stressful day with this collection of extra smooth jazz.</p>    
-  </section>
+  </div>
 
-  <section>
+  <div>
     <img src="jazz-chill-cover.png" alt="jazz-chil-cover">
         <h3>Jazz and Chill</h3>
         <p>Set the mood with these silky sounds.</p>
-  </section>
+  </div>
 
-  <section>
+  <div>
     <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
         <h3>Jazz Saxophone</h3>
         <p>The greatest collection of your sax favorites. </p>
-  </section>
+  </div>
   </div>
   </section>  
 
