--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll1"></div>
+    <div class="scroll"></div>
   <div>
       <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
         <h3>Best of 2020</h3>
@@ -171,7 +171,7 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll2"></div>
+    <div class="scroll"></div>
 
  <div>
     <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
