--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
 </section>
 </section>
 <!--button: more trending-->
-<a href class="buttona">More Trending</a>
+<a class="buttona">More Trending</a>
 
    
   <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll"></div>
+    <div class="scroll1"></div>
+    <section class="playlists">
   <div>
       <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
         <h3>Best of 2020</h3>
@@ -163,6 +164,7 @@
   <p>Background music to keep you going while you study.</p> 
 </div>
   </div>
+</section>
  </section>
 
 <!--button: all your playlists-->
@@ -171,8 +173,8 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll"></div>
-
+    <div class="scroll2"></div>
+<section class="curated">
  <div>
     <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
         <h3>Boozy Brunch</h3>
@@ -202,6 +204,7 @@
         <p>The greatest collection of your sax favorites. </p>
   </div>
   </div>
+</section>
   </section>  
 
  <!--button: more curated-->
