--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
   <section id="trending">
     <h2>Trending Songs </h2>
     <div class="scroll">
-    </div>
 
     <section>
     <div>
@@ -132,7 +131,7 @@
   <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll1"></div>
+    <div class="scroll1">
     <section class="playlists">
   <div>
       <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
@@ -172,7 +171,7 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll2"></div>
+    <div class="scroll2">
 <section class="curated">
  <div>
     <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
