--- a/index.html
+++ b/index.html
@@ -8,84 +8,83 @@
 
 <!--header-->
 <header> 
-<h1>MuzakMaker</h1>
+  <h1>Smooth Jazz</h1>
+  <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.
+</p>
 </header>
 
 <!--navigation-->
 <nav>  
   <h2>Main Navigation</h2>
-  <!--<input class="menu" id="dropdown">-->
-  <!--<label for="dropdown"><span></span></label>-->
+  <input type="checkbox" id="dropdown"/>
+  <label for="dropdown"><span></span></label>
    <ul>
      <li><a href="#home">MuzakMaker</a></li>
-     <li><a href="#trending"></a>Trending Songs</li>
-     <li><a href="#playlists"></a>Your playlists</li>
-     <li><a href="#curated"></a>Curated Playlists</li>
-     <li><a href="#user"><img src="duke-silver.png" alt="duke silver"></a></li>
+     <li><a href="#trending">Trending<br/>Songs</a></li>
+     <li><a href="#playlists">Your<br/>Playlists</a></li>
+     <li><a href="#curated">Curated<br/>Playlists</a></li>
+     <li><a href="#user"><img src="images/duke-silver.png" alt="user profile picture"></a></li>
   </ul>
 </nav>
 
 <!--start to the main-->
 <main>
-  <section class="smooth">
-    <h2>Smooth Jazz</h2>
-    <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.
- </p>
-  </section>
-
   <!--trending songs-->
   <section id="trending">
     <h2>Trending Songs </h2>
     <div class="scroll">
-
     <section>
     <div>
     <h3>Aloma</h3>
       <dl>
-      <dt>Artist </dt>
+      <dt>Artist</dt>
       <dd>Cali</dd>
     </dl>
-  <img src="aloma-cover.png" alt="Aloma"> 
- <audio 
+    </div>
+  <img src="images/aloma-cover.png" alt="white dove on black background"> 
+    <audio 
          controls 
-         src="aloma.mp3">
-    <a href="aloma.mp3"> Play audio </a>
+         src="audio/aloma.mp3">
+         Your browser does not support the <code>audio</code>element.
     </audio>
-</div>
+   </section>
+  </div>
 </section>
 
 <section>
   <div>
   <h3>My Road</h3> 
-    <dl>
-      <dt>Artist</dt>
-      <dd>Nesterouk</dd>
-    </dl>
-   <img src="my-road-cover.png" alt="My Road"> 
-  <audio 
-         controls 
-         src="my-road.mp3">
-    <a href="my-road.mp3">Play audio </a>
-    </audio>
-</div>
+      <dl>
+        <dt>Artist</dt>
+        <dd>Nesterouk</dd>
+      </dl>
+    </div>
+   <img src="images/my-road-cover.png" alt="highway road in the desert with mountains in the background"> 
+      <audio 
+            controls 
+            src="audio/my-road.mp3">
+            Your browser does not support the <code>audio</code>element.
+      </audio>
+    </section>
+  </div>
 </section>
 
 <section>
   <div>
     <h3>Papaya</h3>
-    <dl>
-    <dt>Artist</dt>
-    <dd>Dredstudio</dd>
-    </dl>
-    <img src="papaya-cover.png" alt="Papaya">  
-      <audio
-          controls
-          src="papaya.mp3">
-              <a href="papaya.mp3">
-                  Play audio
-              </a>
-      </audio> 
-</div>
+      <dl>
+        <dt>Artist</dt>
+        <dd>Dredstudio</dd>
+      </dl>
+      </div>
+        <img src="images/papaya-cover.png" alt="cut open papaya on a bright green background">  
+            <audio
+                controls
+                src="audio/papaya.mp3"> 
+                Your browser does not support the <code>audio</code>element.
+            </audio> 
+          </section>
+      </div>
 </section>
 
 <section>
@@ -95,75 +94,77 @@
       <dt>Artist</dt> 
       <dd>Black Rhomb</dd>
     </dl>
-  <img src="smoothies-cover.png" alt="Smoothies"> 
-    <audio
-        controls
-        src="smoothies.mp3">
-            <a href="smoothies.mp3">
-                Play audio
-            </a>
-    </audio> 
-</div>
+    </div>
+  <img src="images/smoothies-cover.png" alt="whole fruits of banana, strawberries and pineapple with a blended smoothie on a pink background"> 
+      <audio
+          controls
+          src="audio/smoothies.mp3">
+          Your browser does not support the <code>audio</code>element.
+      </audio> 
+    </section>
+  </div>
 </section>
 
 <section>
-  <div>
-  <h3>Successful Performance</h3>
-    <dl>
-      <dt>Artist</dt> 
-      <dd>Ricky Bombino</dd>
-    </dl>  
-  <img src="successful-performance-cover.png" alt="Successful-performance">  
-    <audio
-        controls
-        src="successful-performance.mp3">
-            <a href="successful-performance.mp3">
-                Play audio
-            </a>
-    </audio>
-</div>
+      <div>
+        <h3>Successful Performance</h3>
+          <dl>
+            <dt>Artist</dt> 
+            <dd>Ricky Bombino</dd>
+          </dl>
+        </div>  
+      <img src="images/successful-performance-cover.png" alt="a happy man in a red sweater in front of a blue brick ">  
+        <audio
+            controls
+            src="audio/successful-performance.mp3">
+            Your browser does not support the <code>audio</code>element.
+          </audio>
+        </section>
+    </div>
 </section>
-</section>
+
 <!--button: more trending-->
 <a class="buttona">More Trending</a>
-
-   
-  <!--your playlists-->
+  
+ <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll1">
-    <section class="playlists">
-  <div>
-      <img src="best-of-2020-cover.png" alt="best-of-2020-cover">
+    <div class="scroll">
+   
+  <section>
+      <a href="#"><img src="images/best-of-2020-cover.png" alt="the numbers 20 20 with light going in between them on a black background">
         <h3>Best of 2020</h3>
         <p>The music that got you through the lock down.</p>
-  </div>
+      </a>
+  </section>
 
-  <div>
-    <img src="pumpkin-spice-cover.png" alt="pumpkin-spice-cover">
+  <section>
+    <a href="#"><img src="images/pumpkin-spice-cover.png" alt="cup of coffee with latte art of a flower in it sitting on a wooded table ">
       <h3>Pumpkin Spice</h3>
       <p>Creamy and spicy, just like your favorite autumnal latte.</p>
-  </div>
+    </a>
+  </section>
 
-  <div>
-    <img src="quiet-storm-cover.png" alt="quiet-storm-cover">
-    <h3>Quiet Storm</h3>
-    <p>Slow tempos and relaxed rhythms.</p> 
-  </div>
+  <section>
+    <a href="#"><img src="images/quiet-storm-cover.png" alt="blue and purple like clouds with lighting in coming out of the clouds">
+      <h3>Quiet Storm</h3>
+      <p>Slow tempos and relaxed rhythms.</p>
+    </a> 
+  </section>
 
-<div>
-<img src="smooth-jazz-cover.png" alt="smooth-jazz-cover">
-  <h3>Smooth Jazz</h3>
-  <p>The pioneers of smooth jazz</p>
-</div>
-
-<div>
-<img src="smooth-study-cover.png" alt="smooth-study-cover">
-  <h3>Smooth Study</h3>
-  <p>Background music to keep you going while you study.</p> 
-</div>
+<section>
+  <a href="#"><img src="images/smooth-jazz-cover.png" alt="a man in a dark green shirt with glasses looking outwards on a grey background">
+    <h3>Smooth Jazz</h3>
+    <p>The pioneers of smooth jazz</p>
+  </a>
 </section>
- </section>
+
+<section>
+  <a href="#"><img src="images/smooth-study-cover.png" alt="person in a yellow sweater typing on a laptop">
+    <h3>Smooth Study</h3>
+    <p>Background music to keep you going while you study.</p>
+  </a> 
+</section>
 
 <!--button: all your playlists-->
 <a class="buttonb">All Your Playlists</a>
@@ -171,39 +172,43 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll2">
-<section class="curated">
- <div>
-    <img src="boozy-brunch-cover.png" alt="boozy-brunch-cover">
-        <h3>Boozy Brunch</h3>
-        <p>Light up the afternoon with these energetic hits.</p>
-</div>
-  <div>
-    <img src="dinner-party-cover.png" alt="dinner-party-cover">
+    <div class="scroll">
+
+ <section>
+    <a href="#"><img src="images/boozy-brunch-cover.png" alt="group of people holding drinks preparing to cheers each other in the day time">
+          <h3>Boozy Brunch</h3>
+          <p>Light up the afternoon with these energetic hits.</p>
+    </a>
+  </section>
+
+  <section>
+    <a href="#"><img src="images/dinner-party-cover.png" alt="picnic table with a place setting, wine and candles">
         <h3>Dinner Party</h3>
-        <p>Background music to give your party life, but allow your guests to chat.</p> 
-  </div>
+        <p>Background music to give your party life, but allow your guests to chat.</p>
+    </a> 
+  </section>
 
-  <div>
-      <img src="mellow-cover.png" alt="mellow-cover">
+  <section>
+    <a href="#"><img src="images/mellow-cover.png" alt="two people sitting on the park bench surrounded by trees">
       <h3>Mellow</h3>
-      <p>Relax after a stressful day with this collection of extra smooth jazz.</p>    
-  </div>
+      <p>Relax after a stressful day with this collection of extra smooth jazz.</p> 
+    </a>   
+  </section>
 
-  <div>
-    <img src="jazz-chill-cover.png" alt="jazz-chil-cover">
+  <section>
+    <a href="#"><img src="images/jazz-chill-cover.png" alt="close up of red rose petals">
         <h3>Jazz and Chill</h3>
         <p>Set the mood with these silky sounds.</p>
-  </div>
+    </a>
+  </section>
 
-  <div>
-    <img src="smooth-saxophone-cover.png" alt="smooth-saxophone-cover">
+  <section>
+    <a href="#"><img src="images/smooth-saxophone-cover.png" alt="blurred group of saxophone players with a saxophone in the front">
         <h3>Jazz Saxophone</h3>
         <p>The greatest collection of your sax favorites. </p>
-  </div>
-</section>
-  </section>  
-
+    </a>
+  </section>
+ 
  <!--button: more curated-->
       <a class="buttonc">More Curated</a>
 <!--footer-->
