--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </section>
 
 <!--button: more trending-->
-<a class="buttona">More Trending</a>
+<a href="button" class="btn">More Trending</a>
   
  <!--your playlists-->
   <section id="playlists">   
@@ -167,7 +167,8 @@
 </section>
 
 <!--button: all your playlists-->
-<a class="buttonb">All Your Playlists</a>
+<a href="button" class="btn">All Your Playlists</a>
+
   
   <!--curated playlist-->
   <section id="curated">
@@ -210,7 +211,8 @@
   </section>
  
  <!--button: more curated-->
-      <a class="buttonc">More Curated</a>
+ <a href="button" class="btn">More Curated</a>
+  
 <!--footer-->
       <footer>
         <p><small>Copyright 2022 Smooth Jazz</small></p>
