--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <!--navigation-->
 <nav>  
   <h2>Main Navigation</h2>
-  <input type="checkbox" id="dropdown"/>
+  <input type="checkbox" id="dropdown">
   <label for="dropdown"><span></span></label>
    <ul>
      <li><a href="#home">MuzakMaker</a></li>
-     <li><a href="#trending">Trending<br/>Songs</a></li>
-     <li><a href="#playlists">Your<br/>Playlists</a></li>
-     <li><a href="#curated">Curated<br/>Playlists</a></li>
+     <li><a href="#trending">Trending<br>br>Songs</a></li>
+     <li><a href="#playlists">Your<br>Playlists</a></li>
+     <li><a href="#curated">Curated<br>Playlists</a></li>
      <li><a href="#user"><img src="images/duke-silver.png" alt="user profile picture"></a></li>
   </ul>
 </nav>
@@ -32,7 +32,7 @@
   <!--trending songs-->
   <section id="trending">
     <h2>Trending Songs </h2>
-    <div class="scroll">
+    <div class="scroll"></div>
     <section>
     <div>
     <h3>Aloma</h3>
@@ -41,14 +41,14 @@
       <dd>Cali</dd>
     </dl>
     </div>
+    <div>
   <img src="images/aloma-cover.png" alt="white dove on black background"> 
     <audio 
          controls 
          src="audio/aloma.mp3">
          Your browser does not support the <code>audio</code>element.
     </audio>
-   </section>
-  </div>
+   </div>
 </section>
 
 <section>
@@ -59,14 +59,15 @@
         <dd>Nesterouk</dd>
       </dl>
     </div>
+    <div>
    <img src="images/my-road-cover.png" alt="highway road in the desert with mountains in the background"> 
       <audio 
             controls 
             src="audio/my-road.mp3">
             Your browser does not support the <code>audio</code>element.
       </audio>
-    </section>
   </div>
+</section>
 </section>
 
 <section>
@@ -77,13 +78,13 @@
         <dd>Dredstudio</dd>
       </dl>
       </div>
+      <div>
         <img src="images/papaya-cover.png" alt="cut open papaya on a bright green background">  
             <audio
                 controls
                 src="audio/papaya.mp3"> 
                 Your browser does not support the <code>audio</code>element.
-            </audio> 
-          </section>
+            </audio>
       </div>
 </section>
 
@@ -95,13 +96,13 @@
       <dd>Black Rhomb</dd>
     </dl>
     </div>
+    <div>
   <img src="images/smoothies-cover.png" alt="whole fruits of banana, strawberries and pineapple with a blended smoothie on a pink background"> 
       <audio
           controls
           src="audio/smoothies.mp3">
           Your browser does not support the <code>audio</code>element.
       </audio> 
-    </section>
   </div>
 </section>
 
@@ -112,14 +113,14 @@
             <dt>Artist</dt> 
             <dd>Ricky Bombino</dd>
           </dl>
-        </div>  
+        </div> 
+        <div> 
       <img src="images/successful-performance-cover.png" alt="a happy man in a red sweater in front of a blue brick ">  
         <audio
             controls
             src="audio/successful-performance.mp3">
             Your browser does not support the <code>audio</code>element.
           </audio>
-        </section>
     </div>
 </section>
 
@@ -129,7 +130,7 @@
  <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll">
+    <div class="scroll"></div>
    
   <section>
       <a href="#"><img src="images/best-of-2020-cover.png" alt="the numbers 20 20 with light going in between them on a black background">
@@ -164,6 +165,7 @@
     <h3>Smooth Study</h3>
     <p>Background music to keep you going while you study.</p>
   </a> 
+</section>
 </section>
 
 <!--button: all your playlists-->
@@ -209,6 +211,8 @@
         <p>The greatest collection of your sax favorites. </p>
     </a>
   </section>
+  </div>
+</section>
  
  <!--button: more curated-->
  <a href="button" class="btn">More Curated</a>
