--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <title>Media Stream</title>
    <link href="styles.css" rel="stylesheet">
 </head>
-
+  
 <!--header-->
 <header> 
   <h1>Smooth Jazz</h1>
@@ -27,8 +27,9 @@
   </ul>
 </nav>
 
-<!--start to the main-->
-<main>
+
+<!--start of the main content of the assignment -->
+<body>
   <!--trending songs-->
   <section id="trending">
     <h2>Trending Songs </h2>
