--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <label for="dropdown"><span></span></label>
    <ul>
      <li><a href="#home">MuzakMaker</a></li>
-     <li><a href="#trending">Trending<br>br>Songs</a></li>
+     <li><a href="#trending">Trending<br>Songs</a></li>
      <li><a href="#playlists">Your<br>Playlists</a></li>
      <li><a href="#curated">Curated<br>Playlists</a></li>
      <li><a href="#user"><img src="images/duke-silver.png" alt="user profile picture"></a></li>
@@ -127,12 +127,12 @@
 </section>
 
 <!--button: more trending-->
-<a href="button" class="btn">More Trending</a>
+<a class="button" id="more-trending">More Trending</a>
   
  <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll"></div>
+    <div class="scroll-1"></div>
    
   <section class="yp">
       <a href="#"><img src="images/best-of-2020-cover.png" alt="the numbers 20 20 with light going in between them on a black background">
@@ -171,13 +171,13 @@
 </section>
 
 <!--button: all your playlists-->
-<a href="button" class="btn">All Your Playlists</a>
+<a class="button" id="all-your-playlists">All Your Playlists</a>
 
   
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll">
+    <div class="scroll-2">
 
  <section class="cp">
     <a href="#"><img src="images/boozy-brunch-cover.png" alt="group of people holding drinks preparing to cheers each other in the day time">
@@ -217,7 +217,7 @@
 </section>
  
  <!--button: more curated-->
- <a href="button" class="btn">More Curated</a>
+ <a class="button" id="more-curated">More Curated</a>
   
 <!--footer-->
       <footer>
