--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <input type="checkbox" id="dropdown">
   <label for="dropdown"><span></span></label>
    <ul>
-     <li><a href="#home">MuzakMaker</a></li>
+     <li><a href="#home" class="muzamaker">MuzakMaker</a></li>
      <li><a href="#trending">Trending<br>Songs</a></li>
      <li><a href="#playlists">Your<br>Playlists</a></li>
      <li><a href="#curated">Curated<br>Playlists</a></li>
@@ -132,7 +132,7 @@
  <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll-1"></div>
+    <div class="scroll1"></div>
    
   <section class="yp">
       <a href="#"><img src="images/best-of-2020-cover.png" alt="the numbers 20 20 with light going in between them on a black background">
@@ -177,7 +177,7 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll-2">
+    <div class="scroll2">
 
  <section class="cp">
     <a href="#"><img src="images/boozy-brunch-cover.png" alt="group of people holding drinks preparing to cheers each other in the day time">
